# pymsastro

./: .gitignore  README.rst  setup.cfg
docs/: index.rst  untested.rst
docs/pymsastro/: index.rst
notebooks/: convolution_with_mask.ipynb  convolution_with_mask.rst  decorator_collection.rst  error.ipynb  error.rst  signal_to_noise_calculator.ipynb  signal_to_noise_calculator.rst  synthetic_spectrum.ipynb  synthetic_spectrum.rst
notebooks/.ipynb_checkpoints/: convolution_with_mask-checkpoint.ipynb  decorator_collection-checkpoint.ipynb
notebooks/convolution/: convolution_with_mask.ipynb
notebooks/spectrum/synthetic/: synthetic_spectrum.ipynb
notebooks/stats/: error.ipynb  signal_to_noise_calculator.ipynb
pymsastro/: __init__.py
pymsastro/convolution/: __init__.py  convolution_with_mask.py  interpolate_mask.py
pymsastro/convolution/test/: test_convolution_with_mask.py
pymsastro/formula/: __init__.py  math.py  redshift.py  special_relativity.py  wavelength.py
pymsastro/image/: __init__.py  galaxylines.py  ndimage.py  ndspectrum.py
pymsastro/image/compat/: __init__.py  ndarithmetic.py  nddata.py  nddata_base.py  ndslicing.py  nduncertainty.py
pymsastro/spectrum/: __init__.py  addsynspectra.py  synsignal.py  synspectrum.py  synthetic_spectrum_analyse.py  weighting.py
pymsastro/spectrum/synthetic/: __init__.py  addsynspectra.py  (+3 more)
pymsastro/stats/: __init__.py  error.py  mean.py  signal_to_noise.py  sum.py
pymsastro/utils/: __init__.py  decorator_collection.py  dict_convenience.py  json_io.py  matplotlib_convenience.py  numpy_convenience.py
(+14 files in other folders)
