[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[pytest]
minversion = 2.2
norecursedirs = build docs/_build
doctest_plus = enabled

[ah_bootstrap]
auto_use = True

[metadata]
package_name = pymsastro
description = Astropy affiliated package
long_description = This is a package for doing using some of my scripts that rely on astropy
author = Michael Seifert
author_email = michaelseifert04@yahoo.de
license = BSD
url = http://astropy.org/
edit_on_github = False
github_project = MSeifert04/pymsastro

[entry_points]
astropy-package-template-example = packagename.example_mod:main